Fix mobile layout breakpoint; Add logical properties for padding

--- a/assets/style.css
+++ b/assets/style.css
@@ -63,17 +63,22 @@
 }
 
 @layer base {
+    :root {
+        height: 100%;
+    }
+
     body {
+        height: inherit;
+        display: flex;
+        flex-direction: column;
         background-color: var(--blue-700);
         font-family: Roboto, sans-serif;
         letter-spacing: 0;
         font-weight: 400;
         line-height: 1.5;
         font-size: 1rem;
-    }
 
-    @media (width >= 640px) {
-        body {
+        @media (width >= 640px) {
             height: 100vh;
             display: flex;
             align-items: center;
@@ -85,26 +90,35 @@
 
 @layer components {
     .main {
+        flex-grow: 1;
         background-color: var(--white);
+    }
+
+    picture {
+        display: flex;
+        justify-content: center;
+
+        img {
+            max-width: 100%;
+        }
     }
 
     .section {
         display: flex;
         flex-direction: column;
         gap: var(--spacing-500);
-        padding: var(--spacing-500) var(--spacing-300);
+        padding-block-start: var(--spacing-500);
         padding-block-end: 2.75rem;
+        padding-inline: var(--spacing-300);
 
         .article {
             display: flex;
             flex-direction: column;
             gap: var(--spacing-300);
 
-            h1 {
-                color: var(--blue-800);
-            }
-
-            p {
+            h1,
+            p,
+            li {
                 color: var(--blue-800);
             }
             
@@ -119,7 +133,6 @@
             li {
                 display: flex;
                 gap: var(--spacing-200);
-                color: var(--blue-800);
 
                 &::before {
                     content: url('/assets/images/icon-list.svg');
@@ -143,7 +156,8 @@
                 font-size: inherit;
                 border-radius: var(--border-radius);
                 border: 1px solid var(--grey);
-                padding: var(--spacing-200) var(--spacing-300);
+                padding-block: var(--spacing-200);
+                padding-inline: var(--spacing-300);
                 margin-block-end: var(--spacing-300);
             }
     
@@ -152,21 +166,28 @@
                 color: var(--white);
                 border: none;
                 border-radius: var(--border-radius);
-                padding: var(--spacing-200) var(--spacing-600);
+                padding-block: var(--spacing-200);
+                padding-inline: var(--spacing-600);
             }
         }
     }
 
     @media (width >= 640px) {
         .main {
-            padding: 42.86px var(--spacing-500);
+            flex-grow: 0;
             border-radius: 36px;
+            padding-block: 42.86px;
+            padding-inline: var(--spacing-500);
+        }
+
+        picture img {
+            max-width: none;
         }
 
         .section {
+            gap: var(--spacing-300);
             padding: 0;
             padding-block-start: var(--spacing-500);
-            gap: var(--spacing-300);
 
             form input {
                 margin-block-end: var(--spacing-200);
@@ -186,10 +207,6 @@
             padding-inline: var(--spacing-400);
         }
 
-        picture {
-            display: flex;
-        }
-
         .section {
             gap: var(--spacing-400);
             padding: 0;
@@ -198,10 +215,8 @@
                 gap: var(--spacing-400);
             }
 
-            form {
-                input {
-                    margin-block-end: var(--spacing-300);
-                }
+            form input {
+                margin-block-end: var(--spacing-300);
             }
         }
     }
